@@ -70,7 +70,7 @@ public class TopicManager {
     private static int getProperty(final ApplicationConfig config, final String property, final int defaultValue) {
         int partitions;
         try {
-            partitions = new Integer(config.get(property).toString());
+            partitions = Integer.valueOf(config.get(property).toString());
         } catch (final NullPointerException e) {
             partitions = defaultValue;
         }
